Avoid jump when reloading the viewer

--- a/angular/src/styles.less
+++ b/angular/src/styles.less
@@ -196,6 +196,9 @@ waxe-file {
     resize: vertical;
     overflow: hidden;
     padding-bottom: 15px;
+    // We need to set height to be sure the page doesn't jump when the viewer
+    // is reloading.
+    height:  200px;
   }
 
   .po-entries {
